# ivrit-py

./: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
examples/: runpod_persistent_session.py
ivrit/: __init__.py  audio.py  diarization.py  utils.py
tests/: test_runpod_session.py
