[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ivrit"
dynamic = ["version"]
description = "ivrit.ai helper package"
authors = [
  { name="Yair Lifshitz", email="yair@ivrit.ai" },
  { name="Yoad Snapir", email="yoad@ivrit.ai" },
  { name="Yanir Marmor", email="yanir@ivrit.ai" },
  { name="Kinneret Misgav", email="kinneret@ivrit.ai" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
all = [
    "faster-whisper>=1.1.1",
    "imageio-ffmpeg>=0.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyannote-audio>=3.3.2",
    "pywhispercpp",
    "scikit-learn>=1.0.0",
    "speechbrain>=0.5.0",
    "stable-ts-whisperless>=2.18.3",
    "torch",
]

[tool.hatch.version]
source = "env"
variable = "PACKAGE_VERSION"

[tool.hatch.build.targets.wheel]
packages = ["ivrit"]

[tool.hatch.build.targets.sdist]
include = [
    "/ivrit",
    "/tests",
    "/README.md",
    "/THIRD_PARTY_NOTICES.md",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
ivrit = { workspace = true }

[dependency-groups]
dev = [
    "ivrit",
    "faster-whisper>=1.1.1",
    "imageio-ffmpeg>=0.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyannote-audio>=3.3.2",
    "scikit-learn>=1.0.0",
    "speechbrain>=0.5.0",
    "stable-ts-whisperless>=2.18.3",
    "torch>=2.6.0",
    "dotenv>=0.9.9",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
